--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -7,11 +7,11 @@
           <ul>
             <li class="over-flow">
 
-              <p class="task-list-text display-inline"><%= task.name %></p>
+              <%= task.name %>
 
 
               <div style="float:right;">
-                <p class="task-list-text display-inline"><%= check_box_tag 'completed?', 1, task.status, disabled: true, id: "task_complete" %></p>
+                <%= check_box_tag 'completed?', 1, task.status, disabled: true, id: "task_complete" %>
               </div>
 
               <div role="group" aria-label="...">
