--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,5 @@
-<% @project.each do |project| %>
+<br><% @project.each do |project| %><hr>
   <%= 'Project: '%>: <%= project.name  %>
   <%= link_to 'Details', project_path(project), :class => 'btn btn-outline-primary' %><br>
 <% end %>
+
