--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,24 +1,20 @@
-<%= 'Project: '%>:<%= @project.name %>
+<br><%= 'Project: '%>:<%= @project.name %> Count of tasks: <%= @project.tasks.count %><br>
 <%= link_to 'Edit', edit_project_path(@project), :class => 'btn btn-outline-primary' %>
 <%= link_to 'Home', home_path, :class => 'btn btn-outline-primary' %>
 <%= link_to 'Delete', project_path(@project), method: :delete, data: {confirm: "Are you sure?"},
  :class => 'btn btn-danger' %>
- <% @project.tasks.each do |task| %>
+ <% @project.tasks.sort_by(&:name).each do |task| %>
+ <br><hr>
           <ul>
             <li class="over-flow">
-
               <%= task.name %>
               <%= task.status %>
-              <div style="float:right;">
-                <%= check_box_tag 'completed?', 1, task.status, disabled: true, id: "task_complete" %>
-              </div>
-
               <div role="group" aria-label="...">
                 <%= button_to "Edit", edit_project_task_path(@project,task), method: 'get', class: "button-small btn light-green"%>
                 <%= button_to "Delete", project_task_path(@project,task), method: 'delete', class: "button-small btn"%>
               </div>
-
             </li>
           </ul>
 <% end %>
-        <%= link_to "New Task", new_project_task_path(@project), method: 'get', class: "text-center form-control btn-main margin-top-25"%>
+<%= link_to "New Task", new_project_task_path(@project), method: 'get', class: "text-center form-control btn-main margin-top-25"%>
+       
