--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for ([@project, @task]) do |f| %>
+<%= f.text_field(:name, {:class => 'form-control'}) %>
   <p>done</p>
   <%= f.text_field(:status, {:type => 'radio', :value => 'done'}) %>
   <p>in process</p>
