--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -4,6 +4,7 @@
     <br>
     <%= f.text_field(:name, {:class => 'form-control'}) %>
   </p>
+  <%= f.hidden_field :user_id, :value => @project.user_id%>
   <p>
     <%= f.submit ({:value => 'Save', :class => 'btn btn-success'})%>
   </p>
