--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,6 @@
 <br><%= 'Project: '%>:<%= @project.name %> Count of tasks: <%= @project.tasks.count %><br>
 <%= 'Author_id: '%>:<%= @project.user_id %>
+<%= 'Dead_line: '%>:<%= @project.dead_line %>
 <%= link_to 'Home', home_path, :class => 'btn btn-outline-primary' %>
 <% if current_user.id == @project.user_id %>
 <%= link_to 'Edit', edit_project_path(@project), :class => 'btn btn-outline-primary' %>
