--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,12 +1,17 @@
-<%= form_for :project, url: projects_path do |f| %>
-  <p>
-    <h2><%= 'Project name: '%>:</h2>
-    <br>
-    <%= f.text_field(:name, {:class => 'form-control'}) %>
-    <%= f.date_field(:dead_line, {:class => 'form-control'}) %>
-  </p>
-  <%= f.hidden_field :user_id, :value => @project.user_id%>
-  <p>
-    <%= f.submit ({:value => 'Save', :class => 'btn btn-success'})%>
-  </p>
+<% if @project.errors.any? %>
+  <% @project.errors.full_messages.each do |err| %>
+    <div class="alert alert-danger"><%= err %></div>
+  <% end %>
+<% end %>
+<%= form_for(@project) do |f| %>
+  <div class="form-group">
+    <h4>Project name</h4>
+     <%= f.text_field(:name, {:class => 'form-control'}) %>
+  </div>
+  <div class="form-group">
+    <h4>Deadline</h4>
+     <%= f.date_field(:dead_line, {:class => 'form-control'}) %>
+     <%= f.hidden_field :user_id, :value => @project.user_id%><br>
+     <%= f.submit ({:value => 'Save', :class => 'btn btn-success'})%>
+  </div>
 <%end%>
