--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,13 +1,1 @@
-<%= form_for :project, url: project_path(@project), method: :patch do |f| %>
-  <p>
-    <h2>
-      <%= 'Project name: '%>:
-    </h2>
-    <br>
-    <%= f.text_field(:name, {:class => 'form-control'}) %>
-    <%= f.date_field(:dead_line, {:class => 'form-control'}) %>
-  </p>
-  <p>
-    <%= f.submit ({:value => 'Save', :class => 'btn btn-success'})%>
-  </p>
-<%end%>
+<%= render 'form' %>
