--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,8 +1,19 @@
+<% if @task.errors.any? %>
+  <% @task.errors.full_messages.each do |err| %>
+    <div class="alert alert-danger"><%= err %></div>
+  <% end %>
+<% end %>
 <%= form_for ([@project, @task]) do |f| %>
-<%= f.text_field(:name, {:class => 'form-control'}) %>
-  <p>done</p>
-  <%= f.text_field(:status, {:type => 'radio', :value => 'done'}) %>
-  <p>in process</p>
-  <%= f.text_field(:status, {:type => 'radio', :value => 'in process'}) %>
-  <%= f.submit  %>
+  <div class="form-group">
+    <h4>Task name</h4>
+    <%= f.text_field(:name, {:class => 'form-control'}) %>
+  </div>
+  <div class="form-group">
+   <h4>Status</h4>
+   <label>Done</label>
+    <%= f.text_field(:status, {:type => 'radio', :value => 'done'}) %><br>
+   <label>In process</label>
+    <%= f.text_field(:status, {:type => 'radio', :value => 'in process'}) %><br>
+    <%= f.submit ({:value => 'Save', :class => 'btn btn-success'})%>
+  </div>
 <% end %>
